new message tag _cms.image.new.path

--- a/portal/src/main/resources/i18n/messages.properties
+++ b/portal/src/main/resources/i18n/messages.properties
@@ -39,6 +39,7 @@ _cms.image.create=Create new image
 _cms.image.delete.fail=Image could not be deleted
 _cms.image.delete.question=Delete this image?
 _cms.image.list=Image list
+_cms.image.new.path=Change image path
 _cms.image.not.exist=This image does not exist
 _cms.image.rename=Rename this image
 _cms.image.upload.new=Upload new image
@@ -265,6 +266,7 @@ _portal.ui.notification.registrationIsExpired=The link you used to complete regi
 _portal.ui.notification.solrUnreachable=<strong>Alert:</strong> Unable to get a response from the Search Engine. <strong>Please</strong> try another search later.
 _portal.ui.notification.tryAnotherSearch=<strong>Please</strong> try another search.
 _portal.ui.reset.searchbox=Reset
+_portal.ui.statistics=Statistics
 _portal.ui.viewingrelateditems=You are viewing related items
 _search.boolean.and=and
 _search.boolean.not=not
