--- a/portal/src/main/resources/i18n/messages_nb.properties
+++ b/portal/src/main/resources/i18n/messages_nb.properties
@@ -38,6 +38,7 @@ _cms.image.create=Create new image
 _cms.image.delete.fail=Image could not be deleted
 _cms.image.delete.question=Delete this image?
 _cms.image.list=Image list
+_cms.image.new.path=Change image path
 _cms.image.not.exist=This image does not exist
 _cms.image.rename=Rename this image
 _cms.image.upload.new=Upload new image
@@ -237,8 +238,18 @@ _portal.ui.navigation.of=av
 _portal.ui.navigation.page=Side
 _portal.ui.navigation.results=Resultater
 _portal.ui.notification.error=Feil
+_portal.ui.notification.generalErrorMessage=Something went wrong! An email has been sent to inform our technical staff.
+_portal.ui.notification.malFormedQuery=Unable to fulfil your request due to malformed query parameters.
 _portal.ui.notification.noitemsfound=Ingen objekter funnet
+_portal.ui.notification.pleaseRegisterAgain=Please <a href="/${portalName}/login.html">register your email again</a> to finish registration.
+_portal.ui.notification.recordNotFound=<strong>Alert:</strong> Unable to find the requested Europeana Record. <strong>Please</strong> try another search.
+_portal.ui.notification.recordNotIndexed=<strong>Attention:</strong> Requested Europeana Record is yet indexed. <strong>Please</strong> try another search.
+_portal.ui.notification.recordRevoked=<strong>Attention:</strong> This item has been withdrawn by the provider. <strong>Please</strong> try another search.
+_portal.ui.notification.registrationIsExpired=The link you used to complete registration is invalid or has expired.
+_portal.ui.notification.solrUnreachable=<strong>Alert:</strong> Unable to get a response from the Search Engine. <strong>Please</strong> try another search later.
+_portal.ui.notification.tryAnotherSearch=<strong>Please</strong> try another search.
 _portal.ui.reset.searchbox=Reset
+_portal.ui.statistics=Statistics
 _portal.ui.viewingrelateditems=Du ser relatert innhold
 _search.boolean.and=og
 _search.boolean.not=ikke
