statistic page - initial go - with message tags additions

--- a/portal/src/main/resources/i18n/messages.properties
+++ b/portal/src/main/resources/i18n/messages.properties
@@ -280,6 +280,8 @@ _search.field.description=Description
 _search.field.provider=Provider
 _search.field.subject=Subject
 _search.field.title=Title
+_statistics.graph.not.rendered=Currently this data-set cannot be rendered as a graph
+_statistics.not.available=No statistics available
 _toberemoved.althome=Click here to return to the Europeana homepage
 _toberemoved.altlogoeuropeana=logo Europeana think culture
 _toberemoved.checkthefaqs=Check the FAQs - they may cover your feedback
