--- a/portal/src/main/resources/i18n/messages_no.properties
+++ b/portal/src/main/resources/i18n/messages_no.properties
@@ -262,6 +262,8 @@ _search.field.description=Beskrivelse
 _search.field.provider=Tilbyder
 _search.field.subject=Tema
 _search.field.title=Tittel
+_statistics.graph.not.rendered=Currently this data-set cannot be rendered as a graph
+_statistics.not.available=No statistics available
 _toberemoved.althome=Klikk her for å gå tilbake til Europeanas hjemmeside
 _toberemoved.altlogoeuropeana=logo Norvegiana tenk kultur
 _toberemoved.checkthefaqs=Sjekk FAQ - dine spørsmål kan være besvart der
