updated & synched Norvegiana translation files

--- a/portal/src/main/resources/i18n/messages.properties
+++ b/portal/src/main/resources/i18n/messages.properties
@@ -26,11 +26,13 @@ _cms.administration.pages=Page administration
 _cms.administration.title=Administration
 _cms.administration.users=User administration
 _cms.cancel=Cancel
+_cms.change=Change
 _cms.create=Create
 _cms.delete=Delete
 _cms.edit=Edit
 _cms.existing.images=Existing images
 _cms.existing.pages=Existing pages
+_cms.find=find
 _cms.goto.upload=Go to Upload
 _cms.html.editor.show.hide=Show / Hide HTML editor
 _cms.image.change=Change this image
@@ -47,24 +49,37 @@ _cms.page.create=Create a new page
 _cms.page.create.step.1=To create a new page enter the path (optional) and the name of the new page. The name must end with .dml
 _cms.page.create.step.2=The base path will be automatically created. Paths that follow are not mandatory but can help you with creating a logical structure for organizing and grouping pages.
 _cms.page.edit=Edit this page
+_cms.page.list=Page list
 _cms.page.not.exist=This page does not exist
 _cms.rename=Rename
 _cms.save=Save
 _cms.update=Update
 _cms.upload=Upload
+_cms.user.change.role.step.1=Fill in the name or email of the user whose role you want to change
+_cms.user.change.role.step.2=Press "Find"
+_cms.user.change.role.step.3=Select the new role for the user from the drop-down list
+_cms.user.change.role.step.4=Press "Change"
+_cms.user.find=Find a user_cms.versions=Versions
+_cms.user.not.found=No user found matching your input
+_cms.user.role.administrator=Administrator
+_cms.user.role.choose=Choose a user-role
+_cms.user.role.current=Current role
+_cms.user.role.new=New role
+_cms.user.role.public=Reqular user
+_cms.user.role.set.to=now has the role
+_cms.user.role.super=Super user
 _cms.version.management=version management
 _cms.version.approve=Approve this version
 _cms.version.approve.explain=By approving a version you permanently delete all the other versions of the page
 _cms.versions=Versions
-_facet.abm.county=county
-_facet.by.collection=By Collection
+_facet.by.collection=By collection
 _facet.by.country=By country
 _facet.by.date=By date
 _facet.by.language=By language
 _facet.by.provider=By provider
 _facet.by.type=By type
-_facet.by.user.tag=By user tag
-_facet.by.year=null
+_facet.by.user.tag=By us
+_facet.by.year=Bye year
 _locale.AL=Albania
 _locale.AM=Armenia
 _locale.AT=Austria
@@ -136,6 +151,7 @@ _locale.sr=Serbian (scc)
 _locale.sv=Swedish (sve/swe)
 _metadata.abm.contentProvider=Provider
 _metadata.abm.county=County
+_metadata.abm.data.provider=Data provider
 _metadata.abm.municipality=Municipality
 _metadata.dc.contributor=Contributor
 _metadata.dc.coverage=Coverage
