--- a/portal/src/main/resources/i18n/messages_no.properties
+++ b/portal/src/main/resources/i18n/messages_no.properties
@@ -1,5 +1,5 @@
 _action.OpenInNewWindow=Åpne i nytt vindu
-_action.add.annotation=null
+_action.add.annotation=Add annotation
 _action.add.tag=Legg til en tag
 _action.advanced.search=Avansert søk
 _action.alt.list.view=Listevisning
@@ -8,6 +8,7 @@ _action.alt.next.page=Klikk her for neste resultatside
 _action.alt.previous.page=Klikk her for forrige resultatside
 _action.alt.table.view=Tabellvisning
 _action.chooselanguage=Velg språk
+_action.form.submit=Submit
 _action.personal.page=Mitt Norvegiana
 _action.previous=Forrige
 _action.refine.your.search=Begrens søket
@@ -26,10 +27,12 @@ _cms.administration.title=Administration
 _cms.administration.users=User administration
 _cms.cancel=Cancel
 _cms.create=Create
+_cms.change=Change
 _cms.delete=Delete
 _cms.edit=Edit
 _cms.existing.images=Existing images
 _cms.existing.pages=Existing pages
+_cms.find=find
 _cms.goto.upload=Go to Upload
 _cms.html.editor.show.hide=Show / Hide HTML editor
 _cms.image.change=Change this image
@@ -46,11 +49,25 @@ _cms.page.create=Create a new page
 _cms.page.create.step.1=To create a new page enter the path (optional) and the name of the new page. The name must end with .dml
 _cms.page.create.step.2=The base path will be automatically created. Paths that follow are not mandatory but can help you with creating a logical structure for organizing and grouping pages.
 _cms.page.edit=Edit this page
+_cms.page.list=Page list
 _cms.page.not.exist=This page does not exist
 _cms.rename=Rename
 _cms.save=Save
 _cms.update=Update
 _cms.upload=Upload
+_cms.user.change.role.step.1=Fill in the name or email of the user whose role you want to change
+_cms.user.change.role.step.2=Press "Find"
+_cms.user.change.role.step.3=Select the new role for the user from the drop-down list
+_cms.user.change.role.step.4=Press "Change"
+_cms.user.find=Find a user
+_cms.user.not.found=No user found matching your input
+_cms.user.role.administrator=Administrator
+_cms.user.role.choose=Choose a user-role
+_cms.user.role.current=Current role
+_cms.user.role.new=New role
+_cms.user.role.public=Reqular user
+_cms.user.role.set.to=now has the role
+_cms.user.role.super=Super user
 _cms.version.management=version management
 _cms.version.approve=Approve this version
 _cms.version.approve.explain=By approving a version you permanently delete all the other versions of the page
@@ -62,7 +79,7 @@ _facet.by.language=via språk
 _facet.by.provider=via tilbyder
 _facet.by.type=via type
 _facet.by.user.tag=via brukertags
-_facet.by.year=null
+_facet.by.year=By year
 _locale.AL=Albania
 _locale.AM=Armenia
 _locale.AT=Østerrike
@@ -134,6 +151,7 @@ _locale.sr=Serbisk
 _locale.sv=Svensk
 _metadata.abm.contentProvider=Institusjon
 _metadata.abm.county=Fylke
+_metadata.abm.data.provider=Tilbyder
 _metadata.abm.municipality=Kommune
 _metadata.dc.contributor=Bidragsyter
 _metadata.dc.coverage=Dekning
@@ -152,6 +170,7 @@ _metadata.dc.title=Tittel
 _metadata.dc.type=Ressurstype
 _metadata.dcterms.alternative=Alternativ tittel
 _metadata.dcterms.conformsTo=Er i samsvar med
+_metadata.dcterms.created=Date
 _metadata.dcterms.hasFormat=Har format
 _metadata.dcterms.hasPart=Har del
 _metadata.dcterms.isFormatOf=Er format av
@@ -169,6 +188,7 @@ _metadata.europeana.dataProvider=Tilbyder
 _metadata.europeana.provider=Tilbyder
 _metadata.europeana.type=Type
 _metadata.searchfield.contributor=Bidragsyter
+_metadata.searchfield.dataprovider=Tilbyder
 _metadata.type.all=Alle
 _metadata.type.images=Bilder
 _metadata.type.sounds=Lyder
@@ -180,6 +200,8 @@ _mine.delete=Slett
 _mine.email.address=Emailadresse
 _mine.firstname=Fornavn
 _mine.forgotpassword=Glemt passord?
+_mine.forgotpassword.new.password=New password
+_mine.forgotpassword.new.password.repeat=Repeat new password
 _mine.itemsaved=Objekt lagret
 _mine.itemsavefailed=Lagring av objekt feilet
 _mine.last.name=Etternavn
@@ -193,10 +215,13 @@ _mine.saved.items=Lagrede objekter
 _mine.saved.searches=Lagrede søk
 _mine.saved.tags=Lagrede tags
 _mine.user.information=Brukerinfo
+_mine.user.last.login.date=Last login date
 _mine.user.notification.emailformaterror=Vær vennlig å forsikre deg om at emailadressen er korrekt
 _mine.user.notification.emailsendfailed=Email kunne ikke sendes
 _mine.user.notification.emailsent=Email sendt
 _mine.user.notification.failure.search.saved=Lagring av søk feilet
+_mine.user.notification.login.failed=Login failed. Please try again
+_mine.user.notification.login.required=You must login or register
 _mine.user.register-request.emailalreadyregistered=Denne emailadressen er allerede registert
 _mine.user.register.email.has.been.sent=En email er blitt sendt til denne adressen
 _mine.user.register.emailclicktoconfirm=Klikk på denne lenken for å bekrefte registreringen
@@ -220,8 +245,16 @@ _mine.user.register.repeat.password=Gjenta passord
 _mine.user.register.requiredfield=Dette er et oblogatorisk felt
 _mine.user.register.username.choose=Velg brukernavn
 _mine.user.register.username.explain=Brukernavnet vill vises når du har logget på
+_mine.user.registration.date=Registration date
 _mine.user.registration.notification.succeed=Du er nå registrert
+_mine.user.validation.disclaimer.unchecked=Disclaimer must be accepted
+_mine.user.validation.password.long=Password is too long
+_mine.user.validation.password.mismatch=Passwords do not match
+_mine.user.validation.password.tooshort=Password is too short
+_mine.user.validation.username.exists=Username already exists
 _mine.user.validation.username.in.use=er i bruk. Velg et annet brukernavn
+_mine.user.validation.username.invalid.chars=Username may only contain letters, digits, spaces and underscores
+_mine.user.validation.username.long=Username is too long
 _mine.username=Brukernavn
 _portal.menu.languagedropdownlist=Språk
 _portal.ui.message.actions=via hendelser
@@ -255,6 +288,7 @@ _search.boolean.and=og
 _search.boolean.not=ikke
 _search.boolean.or=eller
 _search.field.any.field=Alle felt
+_search.field.collection=Collection
 _search.field.country=Land
 _search.field.creator=Produsent
 _search.field.date=Dato
