--- a/portal/src/main/resources/i18n/messages_en.properties
+++ b/portal/src/main/resources/i18n/messages_en.properties
@@ -38,14 +38,20 @@ _cms.html.editor.show.hide=Show / Hide HTML editor
 _cms.image.change=Change this image
 _cms.image.choose=Choose an image
 _cms.image.create=Create new image
+_cms.image.delete.fail=Image could not be del
+_cms.image.delete.question=Delete this image?
 _cms.image.list=Image list
+_cms.image.new.path=Change image path
 _cms.image.not.exist=This image does not exist
+_cms.image.rename=Rename this image
+_cms.image.upload.new=Upload new image
 _cms.page.create=Create a new page
 _cms.page.create.step.1=To create a new page enter the path (optional) and the name of the new page. The name must end with .dml
 _cms.page.create.step.2=The base path will be automatically created. Paths that follow are not mandatory but can help you with creating a logical structure for organizing and grouping pages.
 _cms.page.edit=Edit this page
 _cms.page.list=Page list
 _cms.page.not.exist=This page does not exist
+_cms.rename=Rename
 _cms.save=Save
 _cms.update=Update
 _cms.upload=Upload
@@ -62,6 +68,7 @@ _cms.user.role.new=New role
 _cms.user.role.public=Reqular user
 _cms.user.role.set.to=now has the role
 _cms.user.role.super=Super user
+_cms.version.management=version management
 _cms.version.approve=Approve this version
 _cms.version.approve.explain=By approving a version you permanently delete all the other versions of the page
 _cms.versions=Versions
@@ -72,7 +79,7 @@ _facet.by.language=By language
 _facet.by.provider=By provider
 _facet.by.type=By type
 _facet.by.user.tag=By user tag
-_facet.by.year=null
+_facet.by.year=By year
 _locale.AL=Albania
 _locale.AM=Armenia
 _locale.AT=Austria
@@ -144,7 +151,7 @@ _locale.sr=Serbian (scc)
 _locale.sv=Swedish (sve/swe)
 _metadata.abm.contentProvider=Provider
 _metadata.abm.county=County
-_metadata.abm.data.provider=Provider
+_metadata.abm.data.provider=Data provider
 _metadata.abm.municipality=Municipality
 _metadata.dc.contributor=Contributor
 _metadata.dc.coverage=Coverage
@@ -181,6 +188,7 @@ _metadata.europeana.dataProvider=Provider
 _metadata.europeana.provider=Provider
 _metadata.europeana.type=Type
 _metadata.searchfield.contributor=Contributor
+_metadata.searchfield.dataprovider=Provider
 _metadata.type.all=All
 _metadata.type.images=Images
 _metadata.type.sounds=Sounds
@@ -192,6 +200,8 @@ _mine.delete=Delete
 _mine.email.address=Email address
 _mine.firstname=First name
 _mine.forgotpassword=I forgot my password
+_mine.forgotpassword.new.password=New password
+_mine.forgotpassword.new.password.repeat=Repeat new password
 _mine.itemsaved=Item saved
 _mine.itemsavefailed=Save item failed
 _mine.last.name=Last name
@@ -210,6 +220,7 @@ _mine.user.notification.emailformaterror=Please make sure your email is correctl
 _mine.user.notification.emailsendfailed=Email could not be sent
 _mine.user.notification.emailsent=Email sent
 _mine.user.notification.failure.search.saved=Saving search failed
+_mine.user.notification.login.failed=Login failed. Please try again
 _mine.user.notification.login.required=You must login or register
 _mine.user.register-request.emailalreadyregistered=This email is already registered
 _mine.user.register.email.has.been.sent=An email has been sent to the following address
@@ -260,20 +271,33 @@ _portal.ui.navigation.of=of
 _portal.ui.navigation.page=Page
 _portal.ui.navigation.results=Results
 _portal.ui.notification.error=Error
+_portal.ui.notification.generalErrorMessage=Something went wrong! An email has been sent to inform our technical staff.
+_portal.ui.notification.malFormedQuery=Unable to fulfil your request due to malformed query parameters.
 _portal.ui.notification.noitemsfound=No items found
+_portal.ui.notification.pleaseRegisterAgain=Please <a href="/${portalName}/login.html">register your email again</a> to finish registration.
+_portal.ui.notification.recordNotFound=<strong>Alert:</strong> Unable to find the requested Europeana Record. <strong>Please</strong> try another search.
+_portal.ui.notification.recordNotIndexed=<strong>Attention:</strong> Requested Europeana Record is yet indexed. <strong>Please</strong> try another search.
+_portal.ui.notification.recordRevoked=<strong>Attention:</strong> This item has been withdrawn by the provider. <strong>Please</strong> try another search.
+_portal.ui.notification.registrationIsExpired=The link you used to complete registration is invalid or has expired.
+_portal.ui.notification.solrUnreachable=<strong>Alert:</strong> Unable to get a response from the Search Engine. <strong>Please</strong> try another search later.
+_portal.ui.notification.tryAnotherSearch=<strong>Please</strong> try another search.
 _portal.ui.reset.searchbox=Reset
+_portal.ui.statistics=Statistics
 _portal.ui.viewingrelateditems=You are viewing related items
 _search.boolean.and=and
 _search.boolean.not=not
 _search.boolean.or=or
 _search.field.any.field=Any field
 _search.field.country=Country
+_search.field.collection=Collection
 _search.field.creator=Creator
 _search.field.date=Date
 _search.field.description=Description
 _search.field.provider=Provider
 _search.field.subject=Subject
 _search.field.title=Title
+_statistics.graph.not.rendered=Currently this data-set cannot be rendered as a graph
+_statistics.not.available=No statistics available
 _toberemoved.althome=Click here to return to the Europeana homepage
 _toberemoved.altlogoeuropeana=logo Europeana think culture
 _toberemoved.checkthefaqs=Check the FAQs - they may cover your feedback
