Advanced search extended with more fields

--- a/portal/src/main/resources/i18n/messages_nb.properties
+++ b/portal/src/main/resources/i18n/messages_nb.properties
@@ -292,10 +292,13 @@ _search.field.collection=Collection
 _search.field.country=Land
 _search.field.creator=Produsent
 _search.field.date=Dato
+_search.field.date.range=Date range
 _search.field.description=Beskrivelse
 _search.field.provider=Tilbyder
 _search.field.subject=Tema
 _search.field.title=Tittel
+_search.in=Search in
+_search.select=Select
 _statistics.graph.not.rendered=Currently this data-set cannot be rendered as a graph
 _statistics.not.available=No statistics available
 _toberemoved.althome=Klikk her for å gå tilbake til Europeanas hjemmeside
