--- a/portal/src/main/resources/i18n/messages.properties
+++ b/portal/src/main/resources/i18n/messages.properties
@@ -79,7 +79,7 @@ _facet.by.language=By language
 _facet.by.provider=By provider
 _facet.by.type=By type
 _facet.by.user.tag=By us
-_facet.by.year=Bye year
+_facet.by.year=By year
 _locale.AL=Albania
 _locale.AM=Armenia
 _locale.AT=Austria
@@ -292,10 +292,13 @@ _search.field.collection=Collection
 _search.field.country=Country
 _search.field.creator=Creator
 _search.field.date=Date
+_search.field.date.range=Date range
 _search.field.description=Description
 _search.field.provider=Provider
 _search.field.subject=Subject
 _search.field.title=Title
+_search.in=Search in
+_search.select=Select
 _statistics.graph.not.rendered=Currently this data-set cannot be rendered as a graph
 _statistics.not.available=No statistics available
 _toberemoved.althome=Click here to return to the Europeana homepage
