User now a top-level interface containing Item, Search, etc StaticRepo now an interface with an Impl class, and moved to storage package of core TokenRepo handling registration tokens as well as Persistent Remember-Me Tokens for Spring

--- a/portal/src/main/resources/i18n/messages_sv.properties
+++ b/portal/src/main/resources/i18n/messages_sv.properties
@@ -230,7 +230,7 @@ _unused.createaccount=Skapa ett konto
 _unused.emailwelcome=Välkommen till Mitt Europeana
 _unused.enewsoptin=Håll mig underrättad om ny utveckling inom Europeana
 _unused.featuredisabled=Den här funktionen har inaktiverats för tillfället.
-_unused.feedbackresponse=Tack för din feedback. Om ett svar krävs kommer en person i Europeana-teamet att kontakta dig så snart som möjligt. Det går snabbare att få svar om din feedback skrivs på engelska.
+_unused.feedbackresponse=Tack för din feedback. Om ett svar krävs kommer en user i Europeana-teamet att kontakta dig så snart som möjligt. Det går snabbare att få svar om din feedback skrivs på engelska.
 _unused.findoutmore=Upptäck mer
 _unused.fromourparnters=Från våra samarbetpartner bland museer, arkiv, bibliotek och audiovisuella samlingar
 _unused.fundedby=Finansierad i samarbete med Europeiska unionen
