UserRepoImpl: removeUser added, userName returned, existence check, format check, default is email-before-@, registrationDate from MongoId Merge fixes: datastore attributes removed from launch properties, usage of MessageDigestPasswordEncoder in UserRepoImpl revived

--- a/portal/src/main/resources/i18n/messages_nb.properties
+++ b/portal/src/main/resources/i18n/messages_nb.properties
@@ -253,8 +253,7 @@ _mine.user.validation.password.mismatch=Passwords do not match
 _mine.user.validation.password.tooshort=Password is too short
 _mine.user.validation.username.exists=Username already exists
 _mine.user.validation.username.in.use=er i bruk. Velg et annet brukernavn
-_mine.user.validation.username.invalid.chars=Username may only contain letters, digits, spaces and underscores
-_mine.user.validation.username.long=Username is too long
+_mine.user.validation.username.invalid=Username may be 2 to 24 characters, only lowercase, numbers and single underscores
 _mine.username=Brukernavn
 _portal.menu.languagedropdownlist=Språk
 _portal.ui.message.actions=via hendelser
