--- a/portal/src/main/resources/i18n/messages_nl.properties
+++ b/portal/src/main/resources/i18n/messages_nl.properties
@@ -214,8 +214,7 @@ _mine.user.validation.password.mismatch=Wachtwoorden ongelijk
 _mine.user.validation.password.tooshort=Wachtwoord te kort
 _mine.user.validation.username.exists=Gebrukersnaam bestaat al
 _mine.user.validation.username.in.use=Is in gebruik. Kies een andere gebruikernaam
-_mine.user.validation.username.invalid.chars=Gebruikersnaam mag alleen letters, cijfers, spaties en onderstreep bevatten
-_mine.user.validation.username.long=Gebruikersnaam is te lang
+_mine.user.validation.username.invalid=Gebrukersnaam mag zijn: 2 t/m 24 karakters, kleine letters, getallen and enkel onderstreep
 _mine.username=Gebruikersnaam
 _portal.menu.languagedropdownlist=Taal
 _portal.ui.message.actions=Acties
