indented ABM 'Is about' section in full doc

--- a/portal/src/main/resources/i18n/messages_no.properties
+++ b/portal/src/main/resources/i18n/messages_no.properties
@@ -187,6 +187,7 @@ _metadata.europeana.country=Land
 _metadata.europeana.dataProvider=Tilbydar
 _metadata.europeana.provider=Tilbydar
 _metadata.europeana.type=Type
+_metadata.is.about=Handler om
 _metadata.searchfield.contributor=Bidragsytar
 _metadata.searchfield.dataprovider=Tilbydar
 _metadata.type.all=Alle
