--- a/portal/src/main/resources/i18n/messages_en.properties
+++ b/portal/src/main/resources/i18n/messages_en.properties
@@ -187,6 +187,7 @@ _metadata.europeana.country=Country
 _metadata.europeana.dataProvider=Provider
 _metadata.europeana.provider=Provider
 _metadata.europeana.type=Type
+_metadata.is.about=Is about
 _metadata.searchfield.contributor=Contributor
 _metadata.searchfield.dataprovider=Provider
 _metadata.type.all=All
