--- a/portal/src/main/resources/i18n/messages_nb.properties
+++ b/portal/src/main/resources/i18n/messages_nb.properties
@@ -187,6 +187,7 @@ _metadata.europeana.country=Land
 _metadata.europeana.dataProvider=Tilbyder
 _metadata.europeana.provider=Tilbyder
 _metadata.europeana.type=Type
+_metadata.is.about=Handler om
 _metadata.searchfield.contributor=Bidragsyter
 _metadata.searchfield.dataprovider=Tilbyder
 _metadata.type.all=Alle
