--- a/portal/src/main/resources/i18n/messages_no.properties
+++ b/portal/src/main/resources/i18n/messages_no.properties
@@ -217,6 +217,7 @@ _mine.saved.searches=Lagra søk
 _mine.saved.tags=Lagra tags
 _mine.user.information=Brukarinfo
 _mine.user.last.login.date=Siste innloggingsdato
+_mine.user.remember.me=Remember me
 _mine.user.notification.emailformaterror=Ver venleg å forsikre deg om at e-postadressa er korrekt
 _mine.user.notification.emailsendfailed=E-post kunne ikkje sendast
 _mine.user.notification.emailsent=E-post sendt
