added _facet.has.digital.object=Has digital object

--- a/portal/src/main/resources/i18n/messages_nb.properties
+++ b/portal/src/main/resources/i18n/messages_nb.properties
@@ -80,6 +80,7 @@ _facet.by.provider=via tilbyder
 _facet.by.type=via type
 _facet.by.user.tag=via brukertags
 _facet.by.year=via år
+_facet.has.digital.object=Has digital object
 _locale.AL=Albania
 _locale.AM=Armenia
 _locale.AT=Østerrike
