--- a/portal/src/main/resources/i18n/messages.properties
+++ b/portal/src/main/resources/i18n/messages.properties
@@ -80,6 +80,7 @@ _facet.by.provider=By provider
 _facet.by.type=By type
 _facet.by.user.tag=By us
 _facet.by.year=By year
+_facet.has.digital.object=Has digital object
 _locale.AL=Albania
 _locale.AM=Armenia
 _locale.AT=Austria
