--- a/portal/src/main/resources/i18n/messages_nl.properties
+++ b/portal/src/main/resources/i18n/messages_nl.properties
@@ -56,6 +56,7 @@ _facet.by.provider=Per aanbieder
 _facet.by.type=Per soort object
 _facet.by.user.tag=Per gebruikers tag
 _facet.by.year=Per jaar
+_facet.has.digital.object=Heeft digitaal object
 _locale.AL=Albanië
 _locale.AM=Armenië
 _locale.AT=Oosterijk
