change password, on success now goes to change-password-success.ftl error checking on ftl needs finetuning, but works translation added "Password successfully changed" js_utilities, check if coming from register/password-change pages, if so, do not write takeMeBack cookie.

--- a/portal/src/main/resources/i18n/messages.properties
+++ b/portal/src/main/resources/i18n/messages.properties
@@ -197,6 +197,7 @@ _metadata.type.sounds=Sounds
 _metadata.type.texts=Texts
 _metadata.type.video=Video
 _metadata.type.videos=Videos
+_mine.change.password.success=Password successfully changed
 _mine.date.saved=Date saved
 _mine.delete=Delete
 _mine.email.address=Email address
