--- a/portal/src/main/resources/i18n/messages_nb.properties
+++ b/portal/src/main/resources/i18n/messages_nb.properties
@@ -197,6 +197,7 @@ _metadata.type.sounds=Lyder
 _metadata.type.texts=Tekster
 _metadata.type.video=Video
 _metadata.type.videos=Videoer
+_mine.change.password.success=Password successfully changed
 _mine.date.saved=Dato lagret
 _mine.delete=Slett
 _mine.email.address=E-postadresse
