--- a/portal/src/main/resources/i18n/messages_nl.properties
+++ b/portal/src/main/resources/i18n/messages_nl.properties
@@ -162,6 +162,7 @@ _metadata.type.sounds=Geluiden
 _metadata.type.texts=Teksten
 _metadata.type.video=Video
 _metadata.type.videos=Videos
+_mine.change.password.success=Wachtwoord aangepast
 _mine.date.saved=Datum opgeslagen
 _mine.delete=Verwijder
 _mine.email.address=Email adres
