--- a/portal/src/main/resources/i18n/messages_no.properties
+++ b/portal/src/main/resources/i18n/messages_no.properties
@@ -197,6 +197,7 @@ _metadata.type.sounds=Lydar
 _metadata.type.texts=Tekstar
 _metadata.type.video=Video
 _metadata.type.videos=Videoar
+_mine.change.password.success=Password successfully changed
 _mine.date.saved=Dato lagra
 _mine.delete=Slett
 _mine.email.address=E-postadresse
