forgot-password request page, error messages using js showMessage() translation added for 'Email address not registered'

--- a/portal/src/main/resources/i18n/messages_en.properties
+++ b/portal/src/main/resources/i18n/messages_en.properties
@@ -196,6 +196,7 @@ _metadata.type.sounds=Sounds
 _metadata.type.texts=Texts
 _metadata.type.video=Video
 _metadata.type.videos=Videos
+_mine.change.password.success=Password successfully changed
 _mine.date.saved=Date saved
 _mine.delete=Delete
 _mine.email.address=Email address
@@ -219,6 +220,7 @@ _mine.user.information=User information
 _mine.user.last.login.date=Last login date
 _mine.user.remember.me=Remember me
 _mine.user.notification.emailformaterror=Please make sure your email is correctly formatted and try again
+_mine.user.notification.emailnotregistered=Email address is not registered
 _mine.user.notification.emailsendfailed=Email could not be sent
 _mine.user.notification.emailsent=Email sent
 _mine.user.notification.failure.search.saved=Saving search failed
