--- a/portal/src/main/resources/i18n/messages_nl.properties
+++ b/portal/src/main/resources/i18n/messages_nl.properties
@@ -182,6 +182,7 @@ _mine.saved.searches=Bewaarde zoekopdrachten
 _mine.saved.tags=Bewaarde tags
 _mine.user.information=Gebruikersinformatie
 _mine.user.notification.emailformaterror=Controleer of uw email correct is opgemaakt en probeer het opnieuw
+_mine.user.notification.emailnotregistered=Email adres is niet geregistreerd
 _mine.user.notification.emailsendfailed=Email kan niet worden verzonden
 _mine.user.notification.emailsent=Email verzonden
 _mine.user.notification.failure.search.saved=Zoekopdracht opslaan mislukt
