--- a/portal/src/main/resources/i18n/messages_no.properties
+++ b/portal/src/main/resources/i18n/messages_no.properties
@@ -221,6 +221,7 @@ _mine.user.information=Brukarinfo
 _mine.user.last.login.date=Siste innloggingsdato
 _mine.user.remember.me=Remember me
 _mine.user.notification.emailformaterror=Ver venleg å forsikre deg om at e-postadressa er korrekt
+_mine.user.notification.emailnotregistered=Email address is not registered
 _mine.user.notification.emailsendfailed=E-post kunne ikkje sendast
 _mine.user.notification.emailsent=E-post sendt
 _mine.user.notification.failure.search.saved=Lagring av søk feila
