--- a/portal/src/main/resources/i18n/messages.properties
+++ b/portal/src/main/resources/i18n/messages.properties
@@ -221,6 +221,7 @@ _mine.user.information=User information
 _mine.user.last.login.date=Last login date
 _mine.user.remember.me=Remember me
 _mine.user.notification.emailformaterror=Please make sure your email is correctly formatted and try again
+_mine.user.notification.emailnotregistered=Email address is not registered
 _mine.user.notification.emailsendfailed=Email could not be sent
 _mine.user.notification.emailsent=Email sent
 _mine.user.notification.failure.search.saved=Saving search failed
