--- a/portal/src/main/resources/i18n/messages_nb.properties
+++ b/portal/src/main/resources/i18n/messages_nb.properties
@@ -221,6 +221,7 @@ _mine.user.information=Brukerinfo
 _mine.user.last.login.date=Siste innloggingsdato
 _mine.user.remember.me=Remember me
 _mine.user.notification.emailformaterror=Vær vennlig å forsikre deg om at e-postadressen er korrekt
+_mine.user.notification.emailnotregistered=Email address is not registered
 _mine.user.notification.emailsendfailed=E-post kunne ikke sendes
 _mine.user.notification.emailsent=E-post sendt
 _mine.user.notification.failure.search.saved=Lagring av søk feilet
