User can now remove their own user acount. showConfirmation() js function added, similar to showMessages() for uniform messaging/notification/confirmation

--- a/portal/src/main/resources/i18n/messages.properties
+++ b/portal/src/main/resources/i18n/messages.properties
@@ -61,6 +61,7 @@ _cms.user.change.role.step.3=Select the new role for the user from the drop-down
 _cms.user.change.role.step.4=Press "Change"
 _cms.user.find=Find a user_cms.versions=Versions
 _cms.user.not.found=No user found matching your input
+_cms.user.remove.confirm=By clicking OK you will permanently remove the user registration and all saved items. Click Cancel to abort.
 _cms.user.role.administrator=Administrator
 _cms.user.role.choose=Choose a user-role
 _cms.user.role.current=Current role
