--- a/portal/src/main/resources/i18n/messages_nb.properties
+++ b/portal/src/main/resources/i18n/messages_nb.properties
@@ -61,6 +61,7 @@ _cms.user.change.role.step.3= Velg den nye rollen til brukeren fra nedtrekksmeny
 _cms.user.change.role.step.4=Trykk "Endre"
 _cms.user.find=Finn en bruker
 _cms.user.not.found= Ingen bruker funnet som samsvarer med dine kriterier
+_cms.user.remove.confirm=By clicking OK you will permanently remove the user registration and all saved items. Click Cancel to abort.
 _cms.user.role.administrator=Administrator
 _cms.user.role.choose=Velg en brukerrolle
 _cms.user.role.current=Nåværende rolle
