--- a/portal/src/main/resources/i18n/messages_no.properties
+++ b/portal/src/main/resources/i18n/messages_no.properties
@@ -61,6 +61,7 @@ _cms.user.change.role.step.3=Vel den nya rolla til brukaren frå nedtrekksmenyen
 _cms.user.change.role.step.4=Trykk “Endre”
 _cms.user.find=Finn ein brukar
 _cms.user.not.found=Ingen brukar funnen som samsvarar med dine kriterium
+_cms.user.remove.confirm=By clicking OK you will permanently remove the user registration and all saved items. Click Cancel to abort.
 _cms.user.role.administrator=Administrator
 _cms.user.role.choose=Vel ein brukarrolle
 _cms.user.role.current=Noverande rolle
