added translation tag '_metadata.abm.namedPlace'

--- a/portal/src/main/resources/i18n/messages_en.properties
+++ b/portal/src/main/resources/i18n/messages_en.properties
@@ -154,6 +154,7 @@ _metadata.abm.contentProvider=Provider
 _metadata.abm.county=County
 _metadata.abm.data.provider=Data provider
 _metadata.abm.municipality=Municipality
+_metadata.abm.namedPlace=Named place
 _metadata.dc.contributor=Contributor
 _metadata.dc.coverage=Coverage
 _metadata.dc.creator=Author
