--- a/portal/src/main/resources/i18n/messages_no.properties
+++ b/portal/src/main/resources/i18n/messages_no.properties
@@ -155,6 +155,7 @@ _metadata.abm.contentProvider=Institusjon
 _metadata.abm.county=Fylke
 _metadata.abm.data.provider=Tilbyder
 _metadata.abm.municipality=Kommune
+_metadata.abm.namedPlace=Named place
 _metadata.dc.contributor=Bidragsyter
 _metadata.dc.coverage=Dekning
 _metadata.dc.creator=Opphavsperson
