translations and links statistics homepage

--- a/portal/src/main/resources/i18n/messages_en.properties
+++ b/portal/src/main/resources/i18n/messages_en.properties
@@ -287,6 +287,9 @@ _portal.ui.notification.solrUnreachable=<strong>Alert:</strong> Unable to get a 
 _portal.ui.notification.tryAnotherSearch=<strong>Please</strong> try another search.
 _portal.ui.reset.searchbox=Reset
 _portal.ui.statistics=Statistics
+_portal.ui.statistics.records=Nr. of records
+_portal.ui.statistics.objects=Nr. of digital objects
+_portal.ui.statistics.providers=Providers
 _portal.ui.viewingrelateditems=You are viewing related items
 _search.boolean.and=and
 _search.boolean.not=not
