--- a/portal/src/main/resources/i18n/messages_nb.properties
+++ b/portal/src/main/resources/i18n/messages_nb.properties
@@ -290,6 +290,9 @@ _portal.ui.notification.solrUnreachable=<strong>Alert:</strong> Ikke i stand til
 _portal.ui.notification.tryAnotherSearch=<strong>Vennligst</strong> prøv et annet søk.
 _portal.ui.reset.searchbox=Nullstill
 _portal.ui.statistics=Statistikk
+_portal.ui.statistics.records=Nr. of records
+_portal.ui.statistics.objects=Nr. of digital objects
+_portal.ui.statistics.providers=Providers
 _portal.ui.viewingrelateditems=Du ser relatert innhold
 _search.boolean.and=og
 _search.boolean.not=ikke
