--- a/portal/src/main/resources/i18n/messages_no.properties
+++ b/portal/src/main/resources/i18n/messages_no.properties
@@ -290,6 +290,9 @@ _portal.ui.notification.solrUnreachable=<strong>Alert:</strong> Ikkje i stand ti
 _portal.ui.notification.tryAnotherSearch=<strong>Ver venleg</strong> prøv eit anna søk.
 _portal.ui.reset.searchbox=Nullstill
 _portal.ui.statistics=Statistikk
+_portal.ui.statistics.records=Nr. of records
+_portal.ui.statistics.objects=Nr. of digital objects
+_portal.ui.statistics.providers=Providers
 _portal.ui.viewingrelateditems=Du ser relatert innhald
 _search.boolean.and=og
 _search.boolean.not=ikkje
