updated nl translations taken from CW

--- a/core/src/main/resources/i18n/messages_nl.properties
+++ b/core/src/main/resources/i18n/messages_nl.properties
@@ -18,7 +18,6 @@
 # See the Licence for the specific language governing
 # permissions and limitations under the Licence.
 #
-
 _action.OpenInNewWindow=Opent in een nieuw venster
 _action.add.annotation=null
 _action.add.tag=Voeg een tag toe
@@ -29,12 +28,12 @@ _action.alt.next.page=Klik hier voor volgende pagina van resultaten
 _action.alt.previous.page=Klik hier voor vorige pagina van resultaten
 _action.alt.table.view=Tabelweergave
 _action.chooselanguage=Kies een taal
-_action.personal.page=Mijn Europeana
+_action.personal.page=Mijn Schatkist
 _action.previous=Vorige
 _action.refine.your.search=Zoekopdracht verfijnen
 _action.return.to.results=Terug naar resultaten
 _action.save.this.search=Bewaar deze zoekopdracht
-_action.save.to.mine=Bewaar in Mijn Europeana
+_action.save.to.mine=Bewaar
 _action.search=Zoek
 _action.search.order.by=Sorteren op
 _action.see.all.related.items=Bekijk alle gerelateerde items
@@ -46,6 +45,7 @@ _cms.administration.pages=Paginas beheren
 _cms.administration.title=Beheer
 _cms.administration.users=Gebruikers beheren
 _cms.cancel=Annuleren
+_cms.change=Aanpassen
 _cms.create=Aanmaken
 _cms.delete=Verwijderen
 _cms.edit=Bewerken
@@ -56,14 +56,42 @@ _cms.html.editor.show.hide=Toon / verberg HTML editor
 _cms.image.change=Afbeelding aanpassen
 _cms.image.choose=Kies een afbeelding
 _cms.image.create=Abeelding aanmaken
+_cms.image.delete.fail=Afbeelding kon niet worden verwijderd
+_cms.image.delete.question=Afbeelding verwijderen?
 _cms.image.list=Afbeelding lijst
 _cms.image.not.exist=Afbeelding bestaat niet
+_cms.image.new.path=Afbeelding pad aanpassen
+_cms.image.rename=Afbeelding hernoemen
+_cms.image.upload.new=Nieuwe afbeelding uploaden
+_cms.user.change.role.step.1=Fill in the name or email of the user whose role you want to change
+_cms.user.change.role.step.2=Press "Find"
+_cms.user.change.role.step.3=Select the new role for the user from the drop-down list
+_cms.user.change.role.step.4=Press "Change"
+_cms.user.find=Vind een gebruiker
+_cms.user.list=Gebruikers lijst
+_cms.user.not.found=Geen gebruiker(s) gevonden
+_cms.user.remove.confirm=Door op OK te klikken worden alle opgeslagen gegevens en de gebruikers registratie <strong>voorgoed verwijderd</strong>.<br/><br/>Klik ANNULEER om af te breken.
+_cms.user.remove.fail=Gebruiker kon nier worden verwijderd. Probeer opnieuw
+_cms.user.remove.success=Gebruiker verwijderd
+_cms.user.role.administrator=Administrator
+_cms.user.role.choose=Kies een rol
+_cms.user.role.choose.required=U moet een nieuwe rol kiezen
+_cms.user.role.current=Huidige rol
+_cms.user.role.new=Nieuwe rol
+_cms.user.role.public=Gewone gebruiker
+_cms.user.role.research=Museometrie gebruiker
+_cms.user.role.set.to=heeft nu de rol van
+_cms.user.role.super=Super gebruiker
 _cms.page.create=Maak een nieuwe pagina aan
 _cms.page.create.step.1=Voor het aanmaken van een pagina vul in het pad (als gewenst) en de naam van de nieuwe pagina. De naam van de pagina moet eindigen met .dml
 _cms.page.create.step.2=Het basis pad wordt automatisch aangemaakt. Daarop volgende paden zijn niet verplicht maar kunnen wel helpen met het ordennen en overzicht van de paginas.
 _cms.page.edit=Deze pagina bewerken
+_cms.page.list=Pagina lijst
 _cms.page.not.exist=Deze pagina bestaat niet
+_cms.page.view.source=HTML
+_cms.page.view.wysiwyg=WYSIWYG
 _cms.save=Bewaren
+_cms.undo=wijzigingen ongedaan maken
 _cms.update=Aanpassen
 _cms.upload=Uploaden
 _cms.version.approve=Deze versie goedkeuren
@@ -147,7 +175,7 @@ _locale.sk=Slowaaks (slo)
 _locale.sl=Sloveens (slv)
 _locale.sr=Servisch (ser)
 _locale.sv=Zweeds (zwe)
-_metadata.dc.contributor=Met bijdrage van
+_metadata.dc.contributor=Met bijdrage(n) van
 _metadata.dc.coverage=Herkomst
 _metadata.dc.creator=Vervaardiger
 _metadata.dc.date=Vervaardigingsdatum
@@ -155,6 +183,7 @@ _metadata.dc.description=Beschrijving
 _metadata.dc.format=Formaat
 _metadata.dc.identifier=Identificatie
 _metadata.dc.language=Taal
+_metadata.dc.provider=Aanbieder
 _metadata.dc.publisher=Uitgever
 _metadata.dc.relation=Verwijzing(en)
 _metadata.dc.rights=Rechten
@@ -176,6 +205,17 @@ _metadata.dcterms.replaces=Vervangt
 _metadata.dcterms.requires=Vereist
 _metadata.dcterms.spatial=Plaats van vervaardiging
 _metadata.dcterms.temporal=Periode
+_metadata.icn.acquisitionMeans=Wijze van verwerving
+_metadata.icn.acquisitionYear=Jaar van verwerving
+_metadata.icn.acquiredWithHelpFrom:Verworven met steun van
+_metadata.icn.collectionPart=Deelcollectie
+_metadata.icn.creatorYearOfBirth=Vervaardiger geboortejaar
+_metadata.icn.location=Locatie
+_metadata.icn.material=Materiaal
+_metadata.icn.physicalState=Fysieke staat
+_metadata.icn.province=Provincie
+_metadata.icn.purchasePrice=Aankoopbedrag
+_metadata.icn.technique=Techniek
 _metadata.searchfield.contributor=Bijdragende organisatie
 _metadata.type.all=Alle
 _metadata.type.images=Beelden
@@ -189,7 +229,9 @@ _mine.delete=Verwijder
 _mine.email.address=Email adres
 _mine.firstname=Voornaam
 _mine.forgotpassword=Ik ben mijn wachtwoord vergeten
-_mine.itemsaved=Items opgeslagen
+_mine.forgotpassword.new.password=Nieuw wachtwoord
+_mine.forgotpassword.new.password.repeat=Nieuw wachtwoord herhalen
+_mine.itemsaved=Item opgeslagen
 _mine.itemsavefailed=Opslaan item mislukt
 _mine.last.name=Achternaam
 _mine.loggedinas=Ingelogd als
@@ -207,6 +249,8 @@ _mine.user.notification.emailnotregistered=Email adres is niet geregistreerd
 _mine.user.notification.emailsendfailed=Email kan niet worden verzonden
 _mine.user.notification.emailsent=Email verzonden
 _mine.user.notification.failure.search.saved=Zoekopdracht opslaan mislukt
+_mine.user.notification.login.failed=Inloggen mislukt. Probeer opnieuw.
+_mine.user.notification.login.required=U moet eerst inloggen of registreren
 _mine.user.register-request.emailalreadyregistered=Deze email adres is reeds geregistreerd
 _mine.user.register.email.has.been.sent=Een email is verzonden naar het volgende adres
 _mine.user.register.emailclicktoconfirm=Klik op de volgende link om uw registratie te bevestigen
@@ -219,12 +263,12 @@ _mine.user.register.finishregistration=Registratie voltooien
 _mine.user.register.iagree=Ik ga akkoord
 _mine.user.register.linkexpired=De link die u heeft gebruikt voor het voltooien van uw registratie is ongeldig of verlopen
 _mine.user.register.mycodeofconduct=Ik begrijp dat registreren mij de mogelijkheid biedt tags te creëren voor ieder gewenst item. Ik ga ermee akkoord dat ik geen tags zal creëren die beschouwd zouden kunnen worden als lasterlijk, schadelijk, bedreigend, onwettig, smadend, schendend, beledigend, opruiend, treiterend, pornografisch, onzedelijk, frauduleus, de privacy- of publiciteitsrechten schendend, kwaadaardig, of racistisch of vanuit een etnisch of ander oogpunt aanstootgevend. Door het aanklikken van deze knop verklaar ik dat ik mij zal houden aan deze overeenkomst en ik begrijp dat als ik dat niet doe, mijn registratie zal worden beëindigd.
-_mine.user.register.mycodeofconductrequired=U dient in te stemmen met onze gedragscode om u te laten registreren voor My Europeana
+_mine.user.register.mycodeofconductrequired=U dient in te stemmen met onze gedragscode te registreren
 _mine.user.register.password=Wachtwoord
 _mine.user.register.password.choose=Kies een wachtwoord
 _mine.user.register.password.explain=Wachtwoorden dienen 6-30 karakters lang te zijn
 _mine.user.register.pick.user.name=Uw gebruikersnaam wordt weergegeven wanneer u bent ingelogd
-_mine.user.register.please.follow.link=Volg de link in de email om de registratie af te ronden
+_mine.user.register.please.follow.link=Volg de link in de email om het proces af te ronden
 _mine.user.register.register=Registreren
 _mine.user.register.registration.failed=Een fout is opgetreden tijdens het verwerken van uw registratie. Probeert het opnieuw
 _mine.user.register.repeat.password=Herhaal wachtwoord
@@ -242,6 +286,7 @@ _mine.user.validation.username.invalid=Gebrukersnaam mag zijn: 2 t/m 24 karakter
 _mine.username=Gebruikersnaam
 _portal.menu.languagedropdownlist=Taal
 _portal.ui.message.actions=Acties
+_portal.ui.messages.close=Sluiten
 _portal.ui.message.less=Minder
 _portal.ui.message.more=Meer
 _portal.ui.message.noscript=Om optimaal gebruik te kunnen maken van deze website, dient JavaScript op uw computer geactiveerd te zijn.
@@ -249,6 +294,7 @@ _portal.ui.message.relatedcontent=Gerelateerde content
 _portal.ui.message.success.search.saved=Zoekopdracht bewaard
 _portal.ui.message.usertags=Gebruikerstag(s)
 _portal.ui.messages.items=Items
+_portal.ui.messages.query.required=U moet een zoekterm invullen
 _portal.ui.navigation.matchesfor=Zoekresultaten voor
 _portal.ui.navigation.next=Volgende
 _portal.ui.navigation.of=van
@@ -256,6 +302,7 @@ _portal.ui.navigation.page=Pagina
 _portal.ui.navigation.results=Resultaten
 _portal.ui.notification.error=Fout
 _portal.ui.notification.noitemsfound=Geen items gevonden
+_portal.ui.notification.tryAnotherSearch=Probeer een nieuwe zoekopdracht
 _portal.ui.reset.searchbox=Reset
 _portal.ui.viewingrelateditems=U bekijkt gerelateerde items
 _search.boolean.and=en
@@ -269,7 +316,7 @@ _search.field.description=Omschrijving
 _search.field.provider=Aanbieder
 _search.field.subject=Onderwerp
 _search.field.title=Titel
-_toberemoved.althome=Klik hier om terug te keren naar de Europeana homepage
+_toberemoved.althome=Klik hier om terug te keren naar de homepage
 _toberemoved.altlogoeuropeana=logo Europeana denk cultuur
 _toberemoved.checkthefaqs=Bekijk de lijst met veelgestelde vragen; wellicht omvat deze uw feedback.
 _toberemoved.communities=Communities
