--- a/core/src/main/resources/i18n/messages.properties
+++ b/core/src/main/resources/i18n/messages.properties
@@ -1,5 +1,5 @@
 #
-# Copyright 2010 DELVING BV
+# Copyright 2011 DELVING BV
 #
 # Licensed under the EUPL, Version 1.1 or as soon they
 # will be approved by the European Commission - subsequent
@@ -177,6 +177,7 @@ _metadata.abm.county=County
 _metadata.abm.data.provider=Data provider
 _metadata.abm.municipality=Municipality
 _metadata.abm.namedPlace=Named place
+_metadata.abm.aboutPerson=About Person
 _metadata.dc.contributor=Contributor
 _metadata.dc.coverage=Coverage
 _metadata.dc.creator=Author
