Fixed reordering of the norvegiana facets

--- a/core/src/main/resources/i18n/messages_nb.properties
+++ b/core/src/main/resources/i18n/messages_nb.properties
@@ -1,5 +1,5 @@
 #
-# Copyright 2010 DELVING BV
+# Copyright 2011 DELVING BV
 #
 # Licensed under the EUPL, Version 1.1 or as soon they
 # will be approved by the European Commission - subsequent
@@ -177,6 +177,7 @@ _metadata.abm.county=Fylke
 _metadata.abm.data.provider=Tilbyder
 _metadata.abm.municipality=Kommune
 _metadata.abm.namedPlace=Named place
+_metadata.abm.aboutPerson=Personer
 _metadata.dc.contributor=Bidragsyter
 _metadata.dc.coverage=Dekning
 _metadata.dc.creator=Opphavsperson
